--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="script.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284641342744841" crossorigin="anonymous"></script>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284641342744841"
+     crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="img/icoone-removebg-preview.png">
 </head>
 <body>
