--- a/instagram.html
+++ b/instagram.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Por que seguir nossa loja no Instagram</title>
     <link rel="stylesheet" href="instagram.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284641342744841"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="img/icoone-removebg-preview.png">
   </head>
   <body>
