--- a/namorados/namorados.html
+++ b/namorados/namorados.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284641342744841"
+     crossorigin="anonymous"></script>
   <title>Presenteie sua Namorada com Nossos Produtos</title>
   <link rel="stylesheet" href="namorados.css">
   <link rel="icon" type="image/png" href="img/icoone-removebg-preview.png">
