--- a/cuidados/cuidado.html
+++ b/cuidados/cuidado.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="stilo.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2284641342744841"
+     crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="img/icoone-removebg-preview.png">
 </head>
 <body>
