--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p><b>Confira nossa promoção especial!</b></p>
         </div>
         <div class="produto-image">
-          <img src="img/desconto antonieta.jpeg" alt="Promoção" class="promo-image" height="350" width="250">
+          <img src="img/DESCONTO.jpeg" alt="Promoção" class="promo-image" height="350" width="250">
         </div>
       </div>
     </div>
